stopped most number input overflow

--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@ body, head {
 
 
 }
+number {
+  width: 50%;
+}
 #container{
     
     -moz-user-select: none;
